openshift/examples/fanout/ingress/web-app-single-service-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: single-service-ingress-dev
spec:
  backend:
    serviceName: web-app-dev
    servicePort: 80
